--- a/index.html
+++ b/index.html
@@ -424,11 +424,9 @@
     <div class="container w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50">
       <div class="columns-1 text-slate-200">TC</div>
       <h1 class="col-auto text-center text-6xl pb-4 text-yellow-500">tar command</h1>
-      <div class="text-slate-400 font-light">tarcommand allows you to quickly generate and create archives, compress and
-        uncompress
-        archives, and many
-        other
-        hard-to-remember features and options.</div>
+      <div class="text-slate-400 font-light">tarcommand allows you to quickly generate commands for creating archives,
+        compressing and uncompressing archives, and
+        many other hard-to-remember features and options.</div>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 bg-slate-50">
       <div class="main flex flex-wrap m-4 select-none">
