--- a/index.html
+++ b/index.html
@@ -622,6 +622,12 @@
           etc.tar
           /etc</span></div>
     </div>
+    <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
+      Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>
+    </div>
+    <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
+      <a href="https://tarcommand.com/">&copy;2022 TAR Command, tarcommand.com</a>
+    </div>
   </form>
 </body>
 
