fix html syntax

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </label>
         <label class="flex radio p-2 cursor-pointer">
           <input class="my-auto transform scale-125" type="radio" name="sfg" value="mod_test_label" />
-          <div class="title px-2">Test Label</div>
+          <span class="title px-2">Test Label</span>
         </label>
         <label class="flex radio p-2 cursor-pointer">
           <input class="my-auto transform scale-125" type="radio" name="sfg" value="127" />
