--- a/index.html
+++ b/index.html
@@ -398,6 +398,20 @@
       document.addEventListener("DOMContentLoaded", callback);
     }
   </script>
+  <meta name="description"
+    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+  <meta name="robots" content="noodp" />
+  <link rel="canonical" href="https://tarcommand.com/" />
+  <meta itemprop="name" content="Tar Generator | Tar Command" />
+  <meta itemprop="description"
+    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Tar Generator | Tar Command" />
+  <meta name="og:description"
+    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+  <meta name="og:url" content="https://tarcommand.com/" />
+  <meta name="og:site_name" content="Tar Command Generator" />
+  <meta name="og:type" content="website" />
 </head>
 
 <body class="bg-slate-100">
