--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+  <link href="/css/tailwind.css" rel="stylesheet">
   <script>
+
     let add_verb = function (cmd) {
       let verb = document.getElementById("verbose-chk").checked;
       if (verb) {
