--- a/index.html
+++ b/index.html
@@ -425,6 +425,9 @@
         many other hard-to-remember features and options.</div>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 bg-slate-50">
+      <div>
+        <h2 class="hidden">Mode</h2>
+      </div>
       <div class="main flex flex-wrap m-4 select-none">
         <label class="flex radio p-2 cursor-pointer">
           <input class="my-auto transform scale-125" type="radio" name="sfg" value="99" checked />
@@ -466,6 +469,9 @@
       </div>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 bg-slate-50" id="arfw">
+      <div>
+        <h2 class="hidden">archiving formats</h2>
+      </div>
       <div class="main flex flex-wrap m-4 select-none">
         <label class="flex radio p-2 cursor-pointer">
           <input class="my-auto transform scale-125" type="radio" name="arf" value="none" checked />
@@ -525,7 +531,7 @@
           Files</label>
       </div>
     </div>
-    <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50" style="display: none;">
+    <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 hidden">
       <div class="flex items-center mb-4">
         <input id="permissions-chk" type="checkbox" value="1"
           class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
