--- a/404.html
+++ b/404.html
@@ -389,7 +389,8 @@
             }, true);
 
             const reg = /^\/tar[\w-]+\.html$/ig;
-            if (reg.test(window.location.pathname)) {
+            const res = window.location.pathname;
+            if (reg.test(res)) {
                 const opt = res.substring(5, res.length - 5).split('-');
                 if (opt.length == 0) {
                     opt = [,];
