--- a/404.html
+++ b/404.html
@@ -508,7 +508,7 @@
                 compressing and uncompressing archives, and
                 many other hard-to-remember features and options.</div>
         </div>
-        <div class="container w-5/6 mt-4 mx-auto px-4 bg-slate-50">
+        <div class="container w-5/6 mt-4 mx-auto bg-slate-50">
             <div>
                 <h2 class="hidden">Mode</h2>
             </div>
@@ -552,7 +552,7 @@
                 </label>
             </div>
         </div>
-        <div class="container w-5/6 mt-4 mx-auto px-4 bg-slate-50" id="arfw">
+        <div class="container w-5/6 mt-4 mx-auto bg-slate-50" id="arfw">
             <div>
                 <h2 class="hidden">archiving formats</h2>
             </div>
@@ -595,8 +595,8 @@
                 </label>
             </div>
         </div>
-        <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-1 bg-slate-50">
-            <div class="flex items-center mb-4">
+        <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50">
+            <div class="flex items-center">
                 <input checked id="verbose-chk" type="checkbox" value="1"
                     class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                 <label for="verbose-chk"
@@ -608,8 +608,8 @@
                     Verbose</label>
             </div>
         </div>
-        <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-1 bg-slate-50" id="spaw">
-            <div class="flex items-center mb-4">
+        <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50" id="spaw">
+            <div class="flex items-center">
                 <input id="sparse-chk" type="checkbox" value="1"
                     class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                 <label for="sparse-chk" class="ml-2 mr-4 text-sm font-medium text-gray-900 dark:text-gray-300">Sparse
