--- a/404.html
+++ b/404.html
@@ -51,6 +51,11 @@
                     b = 'bzip2';
                     c = '.bz2';
                     break;
+                case 'lbzip2':
+                    a = 'use-compress-program=lbzip2';
+                    b = a;
+                    c = '.bz2';
+                    break;
                 case '74':
                     a = 'J';
                     b = 'xz';
@@ -405,6 +410,8 @@
                         case 'bzip2':
                             a = '104';
                             break;
+                        case 'lbzip2':
+                            break;
                         case 'xz':
                             a = '74';
                             break;
@@ -565,6 +572,10 @@
                 <label class="flex radio p-2 cursor-pointer">
                     <input class="my-auto transform scale-125" type="radio" name="arf" value="104" />
                     <span class="title px-2">bzip2</span>
+                </label>
+                <label class="flex radio p-2 cursor-pointer">
+                    <input class="my-auto transform scale-125" type="radio" name="arf" value="lbzip2" />
+                    <span class="title px-2">lbzip2</span>
                 </label>
                 <label class="flex radio p-2 cursor-pointer">
                     <input class="my-auto transform scale-125" type="radio" name="arf" value="74" />
