--- a/404.html
+++ b/404.html
@@ -81,6 +81,11 @@
                     b = a;
                     c = '.zst';
                     break;
+                case 'pzstd':
+                    a = arf;
+                    b = a;
+                    c = '.zst';
+                    break;
                 case '90':
                     a = 'Z';
                     b = 'compress';
@@ -419,6 +424,7 @@
                         case 'lzma':
                         case 'lzop':
                         case 'zstd':
+                        case 'pzstd':
                             break;
                         case 'z':
                             a = '90';
@@ -490,13 +496,13 @@
         }
     </script>
     <meta name="description"
-        content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+        content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="robots" content="noodp" />
     <link rel="canonical" href="https://tarcommand.com/" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Tar Generator | Tar Command" />
     <meta name="og:description"
-        content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+        content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="og:url" content="https://tarcommand.com/" />
     <meta name="og:site_name" content="Tar Command Generator" />
     <meta name="og:type" content="website" />
@@ -596,6 +602,10 @@
                 <label class="flex radio p-2 cursor-pointer">
                     <input class="my-auto transform scale-125" type="radio" name="arf" value="zstd" />
                     <span class="title px-2">zstd</span>
+                </label>
+                <label class="flex radio p-2 cursor-pointer">
+                    <input class="my-auto transform scale-125" type="radio" name="arf" value="pzstd" />
+                    <span class="title px-2">pzstd</span>
                 </label>
                 <label class="flex radio p-2 cursor-pointer">
                     <input class="my-auto transform scale-125" type="radio" name="arf" value="90" />
