--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           c = '.zst';
           break;
         case 'pzstd':
-          a = arf;
-          b = a;
+          a = 'I pzstd -';
+          b = 'use-compress-program=pzstd';
           c = '.zst';
           break;
         case '90':
